--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>maket-1</title>
     <link
       rel="stylesheet"
-      href="/styles/style.css"
+      href="./styles/style.css"
     />
   </head>
   <script src="/js/main.js" defer></script>
