--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       href="./styles/style.css"
     />
   </head>
-  <script src="/js/main.js" defer></script>
-  <script src="/js/scroll.js" defer></script>
-  <script src="/js/carousel.js" defer></script>
-  <script src="/js/changePosition.js" defer></script>
+  <script src="./js/main.js" defer></script>
+  <script src="./js/scroll.js" defer></script>
+  <script src="./js/carousel.js" defer></script>
+  <script src="./js/changePosition.js" defer></script>
   <body>
     <div class="wrapper">
       <header class="header" id="header">
