--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <section class="quick_start">
             <div class="quick_start-header">
               <img
-                src="/img/Ellipse.png"
+                src="./img/Ellipse.png"
                 alt=""
               />
               <h2>Быстрый старт</h2>
@@ -335,49 +335,49 @@
             <div class="partnership_inner">
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
               <div class="sponsor">
                 <img
-                  src="/img/logo.png"
+                  src="./img/logo.png"
                   alt="msi"
                 />
               </div>
@@ -399,49 +399,49 @@
                 <ul data-slides>
                   <li class="slide" data-active>
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
                   <li class="slide">
                     <img
-                      src="/img/logo.png"
+                      src="./img/logo.png"
                       alt="msi"
                     />
                   </li>
@@ -520,7 +520,7 @@
           <section class="teachers">
             <div class="teachers_header">
               <img
-                src="/img/Ellipse.png"
+                src="./img/Ellipse.png"
                 alt="ellipse"
               />
               <h2>Ваши преподаватели</h2>
@@ -528,7 +528,7 @@
             <div class="teachers__inner">
               <div class="teacher_block">
                 <img
-                  src="/img/teacher-1.png"
+                  src="./img/teacher-1.png"
                   alt="teacher"
                 />
                 <span class="teacher_name"
@@ -543,7 +543,7 @@
               </div>
               <div class="teacher_block">
                 <img
-                  src="/img/teacher-2.png"
+                  src="./img/teacher-2.png"
                   alt="teacher"
                 />
                 <span class="teacher_name"
@@ -558,7 +558,7 @@
               </div>
               <div class="teacher_block">
                 <img
-                  src="/img/teacher-3.png"
+                  src="./img/teacher-3.png"
                   alt="teacher"
                 />
                 <span class="teacher_name"
@@ -580,7 +580,7 @@
           >
             <a href="#main"
               ><img
-                src="/img/up-arrow.png"
+                src="./img/up-arrow.png"
                 alt="up arrow"
             /></a>
           </div>
@@ -607,28 +607,28 @@
               <li class="social-media_item">
                 <a href="#"
                   ><img
-                    src="/img/vk.svg"
+                    src="./img/vk.svg"
                     alt="vk"
                 /></a>
               </li>
               <li class="social-media_item">
                 <a href="#"
                   ><img
-                    src="/img/youtube.svg"
+                    src="./img/youtube.svg"
                     alt="youtube"
                 /></a>
               </li>
               <li class="social-media_item">
                 <a href="#"
                   ><img
-                    src="/img/facebook.svg"
+                    src="./img/facebook.svg"
                     alt="facebook"
                 /></a>
               </li>
               <li class="social-media_item">
                 <a href="#"
                   ><img
-                    src="/img/instagram.svg"
+                    src="./img/instagram.svg"
                     alt="instagram"
                 /></a>
               </li>
